--- a/Web Server/templates/offices.html
+++ b/Web Server/templates/offices.html
@@ -227,11 +227,13 @@
                 formData.append("addoffice", true);
                 var request = new XMLHttpRequest();
 				request.onreadystatechange = function() {
-					if (request.readyState == XMLHttpRequest.DONE) {
+					// console.log("Inside onreadystatechange function...")
+                    if (request.readyState == XMLHttpRequest.DONE) {
                         document.getElementById('overlay').style.display="none";
 						let error = JSON.parse(request.responseText);
 						if (error.error) {
-							alert("Some error occurred!");
+							// alert("Some error occurred!");
+							alert(error.msg);
 							return 0;
 						}
                         if (!error.match) {
@@ -242,8 +244,10 @@
 						location.reload()
 					}
 				}
+                // console.log("Just before requesting the /verfiyOTP endpoint!...")
 				request.open("POST", "/verifyOTP");
 				request.send(formData);
+                // console.log("Just after requesting the /verfiyOTP endpoint!...")
             }
 
         </script>
