capturing file receiving person feature added

--- a/Web Server/templates/dashboard.html
+++ b/Web Server/templates/dashboard.html
@@ -406,6 +406,10 @@
                     
                 </table>
             </center>
+            <div id="csv_format">
+                <!-- <button onclick="openCreateNew()"><i class="fa fa-plus"></i>&nbsp;&nbsp;&nbsp;Create NewButton</button> -->
+                <button onclick="openCreateNew()">NewButton</button>
+            </div>
         </div>
         <script>
             
