--- a/Web Server/templates/dashboard.html
+++ b/Web Server/templates/dashboard.html
@@ -406,10 +406,9 @@
                     
                 </table>
             </center>
-            <div id="csv_format">
-                <!-- <button onclick="openCreateNew()"><i class="fa fa-plus"></i>&nbsp;&nbsp;&nbsp;Create NewButton</button> -->
+            <!-- <div id="csv_format">
                 <button onclick="openCreateNew()">NewButton</button>
-            </div>
+            </div> -->
         </div>
         <script>
             
